# Atom-Calculator

./: AtomCalculator  AtomCalculator.cpp  AtomCalculator.h  CMakeLists.txt
utilities/: ArrayOps.cpp  StringWorks.cpp  StringWorks.h
utilities/headers/: ArrayOps.h  StringWorks.h
