# CMakeList.txt : CMake project for AtomCalculator, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("AtomCalculator")

# Add source to this project's executable.
add_executable (AtomCalculator "AtomCalculator.cpp" "AtomCalculator.h")

# TODO: Add tests and install targets if needed.
